[workspace]
members = [
	"app/*"
, "common/rbuf"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_memory = "0.3.0"
flate2 = "1.0"
log = "0.4"
env_logger = "0.9"
